objects/Contract.object
<CustomObject>
    <fields>
        <fullName>AAG__c</fullName>
        <description>SFDC-5711 : field created for better reporting.</description>
        <label>AAG</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AUMFeeStructure__c</fullName>
        <description>SFDC1-9647 - AUM Fee Structure</description>
        <inlineHelpText>For OM to know if there is an Assets Under Management impact to document in SAP</inlineHelpText>
        <label>AUM Fee Structure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <description>SFDC1-10131 New Contract field: &quot;Active&quot;</description>
        <formula>IF(
OR(text(ContractStatus__c)== &quot;Validated&quot;, text(ContractStatus__c)== &quot;Validated PO Pending&quot;, text(ContractStatus__c)== &quot;Invoiced&quot;, text(ContractStatus__c)== &quot;Executed&quot;, text(ContractStatus__c)== &quot;Delivered to Customer&quot;, text(ContractStatus__c)== &quot;Approved &amp; Processed&quot;,text(ContractStatus__c)== &quot;Validated-POD Pending&quot;),
True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>to quickly see which Contracts on an Account are &quot;Active&quot;</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AdditionalRejectionInformation__c</fullName>
        <description>SFDC1-6151 This field will help user enter Rejection reason related additional information</description>
        <label>Additional Rejection Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AllAssociatedTotalOpportunityValue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>SFDC1-5864 Cumulative Contract Value,Renaming the Label to &apos;Cumulative Contract Value&apos;, Can not change the API name as being used in Process Builder.</description>
        <inlineHelpText>This field contains total amount values for all opportunities associated to contract with stage equals &quot;6W-Renewal Won&quot;</inlineHelpText>
        <label>zzzCumulative Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AllianceLeadMembers__c</fullName>
        <description>SFDC-5485 - Global Alliances - Upgrade (Amendments)</description>
        <formula>Account.AccountTeamMemberforOppty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Alliance Lead associated with the account.</inlineHelpText>
        <label>Alliance Lead Members</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssociatedTo__c</fullName>
        <description>SFDC-5603 - Associated To field to tag records [Maintenance field]</description>
        <label>Associated To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AssociatedTo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AutoRenewStopped__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-8018-Minor Contract Updates</description>
        <inlineHelpText>Please check the box if this Contract is for Auto renewal stopped.</inlineHelpText>
        <label>Auto Renew Stopped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutoRenewalDS__c</fullName>
        <description>SFDC1-7634 If the AutoRenewal__c on the Contract = True - then Display &quot;Yes&quot; in the field otherwise &quot;No&quot;</description>
        <formula>IF(AutoRenewal__c , &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto Renewal For Drawloop</inlineHelpText>
        <label>AutoRenewalDS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutoRenewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-1178 Creating this field to track auto renewal of a Contract on Opportunity</description>
        <inlineHelpText>Customer can sign one agreement which will automatically renew year after year</inlineHelpText>
        <label>AutoRenewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPNum__c</fullName>
        <description>SFDC1-5223 This field holds the BP number and gets its value from the associated account BP field
SFDC1-5260 Updated formula to get BP# value from Channel Partner Associated on Opportunity
SFDC1-5176 Channel Partner BP# value cannot have commas,converted field type from Number to Text</description>
        <formula>Opportunity__r.ChannelPartner__r.BP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Partner BP#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BSI__c</fullName>
        <description>SFDC1-6073:This field is used to store the BSI Number from Opportunity field of the same name
SFDC1-9669:Change BSI# to BSI Membership #</description>
        <formula>Opportunity__r.BSI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BSI Membership #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToCity__c</fullName>
        <description>SFDC1-905 Bill To: City</description>
        <inlineHelpText>Bill To: City</inlineHelpText>
        <label>Bill To: City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToClientName__c</fullName>
        <description>SFDC1-905 Bill To: Client Name</description>
        <inlineHelpText>Bill To: Client Name</inlineHelpText>
        <label>Bill To: Client Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToCompanySAP__c</fullName>
        <label>Bill To: Company SAP #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToContactEmailAddress__c</fullName>
        <description>SFDC1- 905 Bill To: Contact Email Address</description>
        <inlineHelpText>Bill To: Contact Email Address</inlineHelpText>
        <label>Bill To: Contact Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BillToContactFirstName__c</fullName>
        <description>SFDC1-905 Bill To: Contact First Name</description>
        <inlineHelpText>Bill To: Contact First Name</inlineHelpText>
        <label>Bill To: Contact First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToContactLastName__c</fullName>
        <description>SFDC1-905 Bill To: Contact Last Name</description>
        <inlineHelpText>Bill To: Contact Last Name</inlineHelpText>
        <label>Bill To: Contact Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToContactSAP__c</fullName>
        <label>Bill To: Contact SAP #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToContactTelephoneNumber__c</fullName>
        <description>SFDC1-905 Bill To: Contact Telephone Number</description>
        <inlineHelpText>Bill To: Contact Telephone Number</inlineHelpText>
        <label>Bill To: Contact Telephone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToCountryCodeLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-7542 This lookup refers to country mentioned in Bill To : Country (text)</description>
        <inlineHelpText>Bill To : Country/Territory</inlineHelpText>
        <label>Bill To: Country/Territory</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Contracts (Bill To: Country)</relationshipLabel>
        <relationshipName>Contracts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BillToPostalZipCode__c</fullName>
        <description>SFDC1-905 Bill To: Postal/Zip Code</description>
        <inlineHelpText>Bill To: Postal/Zip Code</inlineHelpText>
        <label>Bill To: Postal/Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToStateProvince__c</fullName>
        <description>SFDC1-905 Bill To: State/Province</description>
        <inlineHelpText>Bill To: State/Province</inlineHelpText>
        <label>Bill To: State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToStreet__c</fullName>
        <description>SFDC1-905 Bill To: Street</description>
        <inlineHelpText>Bill To: Street</inlineHelpText>
        <label>Bill To: Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingFrequency__c</fullName>
        <description>SFDC1-718;Only on Contract Type = Order Form</description>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Annually (First of the month)</fullName>
                </value>
                <value>
                    <fullName>Last day of the month</fullName>
                </value>
                <value>
                    <fullName>Last Day of the Quarter</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Monthly on First of Month</fullName>
                </value>
                <value>
                    <fullName>Monthly on Last of Month</fullName>
                </value>
                <value>
                    <fullName>Multi Year</fullName>
                </value>
                <value>
                    <fullName>Multi Year for Prof. Srvcs</fullName>
                </value>
                <value>
                    <fullName>Non-Billable</fullName>
                </value>
                <value>
                    <fullName>One time</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Quarterly (First of the month)</fullName>
                </value>
                <value>
                    <fullName>Quarterly on Last of Month</fullName>
                </value>
                <value>
                    <fullName>Semi-Annual</fullName>
                </value>
                <value>
                    <fullName>Two Year</fullName>
                </value>
                <value>
                    <fullName>Consulting Agreement</fullName>
                    <isActive>false</isActive>
                    <label>Consulting Agreement</label>
                </value>
                <value>
                    <fullName>Last day of the month,</fullName>
                    <isActive>false</isActive>
                    <label>Last day of the month,</label>
                </value>
                <value>
                    <fullName>Monthly on the First day of the month</fullName>
                    <isActive>false</isActive>
                    <label>Monthly on the First day of the month</label>
                </value>
                <value>
                    <fullName>Monthly on the Last day of the month</fullName>
                    <isActive>false</isActive>
                    <label>Monthly on the Last day of the month</label>
                </value>
                <value>
                    <fullName>Montly on the First day of the month</fullName>
                    <isActive>false</isActive>
                    <label>Montly on the First day of the month</label>
                </value>
                <value>
                    <fullName>Montly on the Last Day of the Month</fullName>
                    <isActive>false</isActive>
                    <label>Montly on the Last Day of the Month</label>
                </value>
                <value>
                    <fullName>Multi Year for Prof Svcs</fullName>
                    <isActive>false</isActive>
                    <label>Multi Year for Prof Svcs</label>
                </value>
                <value>
                    <fullName>Non Billable</fullName>
                    <isActive>false</isActive>
                    <label>Non Billable</label>
                </value>
                <value>
                    <fullName>Quarterly last day of the month</fullName>
                    <isActive>false</isActive>
                    <label>Quarterly last day of the month</label>
                </value>
                <value>
                    <fullName>Semi Annual</fullName>
                    <isActive>false</isActive>
                    <label>Semi Annual</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillingMonitoring__c</fullName>
        <formula>Opportunity__r.BillingMonitoring__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Select if billing should be monitored.</inlineHelpText>
        <label>Billing Monitoring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Businessline__c</fullName>
        <description>SFDC-1346 field to store comma separated values of business lines derived from contract line items</description>
        <inlineHelpText>Business lines rolled up from contract line items into one single field</inlineHelpText>
        <label>Business Lines</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ByPassValidationsForProcessBuilder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-5851 - This checkbox when set to true bypass the General Agreement validation rule on contract. This is used in process builders to update the contract record being created by wizard without throwing exception.</description>
        <inlineHelpText>By Pass Contract Validations For Flows</inlineHelpText>
        <label>By Pass Validations For Process Builder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CACreationDate__c</fullName>
        <description>SFDC-2530 This field indicates when the batch will run to create Contract Attachment record</description>
        <inlineHelpText>This field indicates when the batch will run to create Contract Attachment record</inlineHelpText>
        <label>CA Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>COUNTCLIDiscountAmount__c</fullName>
        <description>SFDC-2389 Created for showing different tables on OF, Payment OF depending on Discount Amount on CLI.</description>
        <label>COUNTCLIDiscountAmount</label>
        <summaryFilterItems>
            <field>ContractLineItem__c.DiscountAmount__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>ContractLineItem__c.Contract__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CancelRequestReceivedDate__c</fullName>
        <description>SFDC1-718;Order Management will fill in this field with the Date they received a Cancel Letter from the Customer. Once the Date is filled in - it should trigger a case for the rep to CL the Open Renewal Opp.</description>
        <label>Cancel Request Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ChannelPartnerBPNumber__c</fullName>
        <description>SFDC1-1785 replacing channel partner BP number field from formula to a number field to make it editable</description>
        <inlineHelpText>BP# from related channel partner on opportunity</inlineHelpText>
        <label>Channel Partner BP#</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChannelPartnerCompanyName__c</fullName>
        <description>SFDC1-6390 This field is populated from the &quot;Channel Partner&quot; field on the Opportunity</description>
        <formula>Opportunity__r.ChannelPartner__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Partner Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChannelPartnerContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC-1785 Lookup to contact for users to select appropriate channel partner contact</description>
        <inlineHelpText>Select related Channel partner contact</inlineHelpText>
        <label>Channel Partner Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Channel Partner Contracts</relationshipLabel>
        <relationshipName>ChannelPartnerContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChannelPartnerFullAddress__c</fullName>
        <description>SFDC-2699 : This field shows the full address  of a channel partner sans Street. Field is being referred in DocGen Package.</description>
        <formula>IF(NOT(ISBLANK( GlobalAllianceAddressCity__c)), GlobalAllianceAddressCity__c &amp; &quot;, &quot;, &quot;&quot; ) &amp;
IF(NOT(ISBLANK( GlobalAllianceAddressStateProvince__c)), GlobalAllianceAddressStateProvince__c &amp; &quot;, &quot;, &quot;&quot; ) &amp;
IF(NOT(ISBLANK(GlobalAllianceAddressPostalZipCode__c)), GlobalAllianceAddressPostalZipCode__c &amp; &quot;, &quot;, &quot;&quot; ) &amp;
IF(NOT(ISBLANK( GlobalAllianceAddressCountry__c )), GlobalAllianceAddressCountry__c , &quot;&quot; )</formula>
        <inlineHelpText>Channel Partners Address</inlineHelpText>
        <label>Channel Partner Full Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChannelPartnerName__c</fullName>
        <description>SFDC-1785 replacing existing channel partner account name fields with a text field  such that it is editable</description>
        <inlineHelpText>Channel partner name from related opportunity</inlineHelpText>
        <label>Channel Partner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientCountryofIncorporation__c</fullName>
        <description>SFDC1-4549</description>
        <formula>ClientLegalEntityLookUp__r.IncorporatedIn__r.Name</formula>
        <label>Client Incorporation Country/Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientLegalEntityCity__c</fullName>
        <description>SFDC1-631 Client Legal Entity : City</description>
        <inlineHelpText>Client Legal Entity : City</inlineHelpText>
        <label>Client Legal Entity: City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientLegalEntityCountryLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-7542 This lookup refers to country mentioned in Client Legal Entity: Country (text)</description>
        <inlineHelpText>Client Legal Entity: Country/Territory</inlineHelpText>
        <label>Client Legal Entity: Country/Territory</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ClientLegalEntityFullAddress__c</fullName>
        <description>SFDC-2541 - Client Legal Entity&apos;s Address for Docgen package.</description>
        <formula>IF(NOT(ISBLANK(	ClientLegalEntityCity__c)), 	ClientLegalEntityCity__c &amp; &quot;, &quot;, &quot;&quot; ) &amp;
IF(NOT(ISBLANK(	ClientLegalEntityStateProvince__c)), 	ClientLegalEntityStateProvince__c &amp; &quot;, &quot;, &quot;&quot; ) &amp;
IF(NOT(ISBLANK(ClientLegalEntityZipPostalCode__c)), ClientLegalEntityZipPostalCode__c  &amp; &quot;, &quot;, &quot;&quot; ) &amp;
IF(NOT(ISBLANK(	ClientLegalEntityCountryLookup__c)), 	ClientLegalEntityCountryLookup__r.Name , &quot;&quot; )</formula>
        <inlineHelpText>Client Legal Entity&apos;s Full Adress</inlineHelpText>
        <label>Client Legal Entity Full Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientLegalEntityLookUp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-905 Client Legal Entity</description>
        <inlineHelpText>Client&apos;s Legal Entity</inlineHelpText>
        <label>Client Legal Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>ClientLegalEntity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ClientLegalEntityStateProvince__c</fullName>
        <description>SFDC1-631 Client Legal Entity : State/Province</description>
        <inlineHelpText>Client Legal Entity : State/Province</inlineHelpText>
        <label>Client Legal Entity: State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientLegalEntityStreet__c</fullName>
        <description>SFDC1-631 Client Legal Entity Address : Street</description>
        <inlineHelpText>Client Legal Entity : Street</inlineHelpText>
        <label>Client Legal Entity: Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientLegalEntityZipPostalCode__c</fullName>
        <description>SFDC1-631 Client Legal Entity : Zip/Postal Code
SFDC1-7807: Updated label to Postal/Zip Code</description>
        <inlineHelpText>Client Legal Entity : Postal/Zip Code</inlineHelpText>
        <label>Client Legal Entity: Postal/Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientNoticeAddressCity__c</fullName>
        <description>SFDC1-2405: Client Notice Address: City</description>
        <inlineHelpText>Client Notice Address: City</inlineHelpText>
        <label>Client Notice Address: City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientNoticeAddressCountryLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-7542 This lookup refers to country mentioned in Client Notice Address: Country (text)</description>
        <inlineHelpText>Client Notice Address: Country/Territory</inlineHelpText>
        <label>Client Notice Address: Country/Territory</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Contracts (Client Notice Address: Country)</relationshipLabel>
        <relationshipName>Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ClientNoticeAddressEmailAddress__c</fullName>
        <description>SFDC-4613  For Sending Notice Renewals to clients</description>
        <inlineHelpText>Client Notice Address: Email Address</inlineHelpText>
        <label>Client Notice Address: Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ClientNoticeAddressStateProvince__c</fullName>
        <description>SFDC1-2405: Client Notice Address: State/Province</description>
        <inlineHelpText>Client Notice Address: State/Province</inlineHelpText>
        <label>Client Notice Address: State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientNoticeAddressStreet__c</fullName>
        <description>SFDC1-2405: Client Notice Address: Street</description>
        <inlineHelpText>Client Notice Address: Street</inlineHelpText>
        <label>Client Notice Address: Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientNoticeAddressZipPostalCode__c</fullName>
        <description>SFDC1-2405: Client Notice Address: Zip/Postal Code
SFDC1-7807: Updated label to Postal/Zip Code</description>
        <inlineHelpText>Client Notice Address: Postal/Zip Code</inlineHelpText>
        <label>Client Notice Address: Postal/Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientStateOfIncorporationNew__c</fullName>
        <description>SFDC1-8096 State of Incorporation of Client Legal Entity
SFDC-2627 Obsolete, replaced by the formula field - and will be deleted along with all the triggers to populate this Text field</description>
        <inlineHelpText>State of Incorporation of Client Legal Entity</inlineHelpText>
        <label>Client State of Incorporation - Obsolete</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientStateOfIncorporation__c</fullName>
        <description>SFDC-2627 Incorporated In - State value needs to display full State name</description>
        <formula>TEXT(ClientLegalEntityLookUp__r.StateOfIncorporation__c)</formula>
        <label>Client State of Incorporation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>SFDC1-5807 : This field will hold the value of Comments</description>
        <inlineHelpText>Enter Comments related to Price Increase</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ContinuationEndDate__c</fullName>
        <description>SFDC-177 Continuation End Date is updated from Renewal Opportunities to the Originating Contract</description>
        <inlineHelpText>Continuation End Date is updated from Renewal Opportunities to the Originating Contract</inlineHelpText>
        <label>Continuation End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractAccount__c</fullName>
        <description>SFDC1-8125: This field is used in &quot;Contract Management&quot; case lightning page layout</description>
        <formula>Account.Name</formula>
        <inlineHelpText>Contract Account</inlineHelpText>
        <label>Contract Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-6735 : Field related  to Consulting Record Type</description>
        <inlineHelpText>Approval required if &gt;$100K or has Milestones or non-standard terms</inlineHelpText>
        <label>Contract Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContractID18Character__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ContractID 18 Character</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractOwner__c</fullName>
        <description>SFDC1-8125: Used in &quot;Contract Management&quot; case lightning layout</description>
        <formula>Owner.FirstName + &apos; &apos; + Owner.LastName</formula>
        <inlineHelpText>Contract Owner</inlineHelpText>
        <label>Contract Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractRejectionPastDue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-7488 : The checkbox get checked when Contract Status = Rejected exceeds 10 days</description>
        <inlineHelpText>The checkbox get checked when Contract Status = Rejected exceeds 10 days</inlineHelpText>
        <label>Contract Rejection Past Due</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContractSpecialOptions__c</fullName>
        <description>SFDC-1887 needed to comply with revenue recognition standards</description>
        <inlineHelpText>If the contract contains special terms or agreements for significant discounts then please select yes. i.e. the contract terms are not standard. If contract has standard terms please select no.</inlineHelpText>
        <label>Contract Special Options</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContractStartQuarter__c</fullName>
        <description>SFDC-5520: Calculate &apos;Contract Start Date&apos; Quarter Year as per 13month changes for FY2022 and 12month for other Financial Years.</description>
        <formula>IF( YEAR(StartDate) &gt; 2021,
IF(OR(MONTH(StartDate) = 1, MONTH(StartDate) = 2, MONTH(StartDate) = 3), TEXT(YEAR(StartDate))&amp;&apos;-Q1&apos;,
IF(OR(MONTH(StartDate) = 4, MONTH(StartDate) = 5, MONTH(StartDate) = 6), TEXT(YEAR(StartDate))&amp;&apos;-Q2&apos;,
IF(OR(MONTH(StartDate) = 7, MONTH(StartDate) = 8, MONTH(StartDate) = 9), TEXT(YEAR(StartDate))&amp;&apos;-Q3&apos;,
IF(OR(MONTH(StartDate) = 10, MONTH(StartDate) = 11, MONTH(StartDate) = 12), TEXT(YEAR(StartDate))&amp;&apos;-Q4&apos;,null)))),
IF( YEAR(StartDate) &lt; 2022,IF(OR(MONTH(StartDate) = 12, MONTH(StartDate) = 1, MONTH(StartDate) = 2), TEXT(YEAR(ADDMONTHS(StartDate,1)))&amp;&apos;-Q1&apos;,
IF(OR(MONTH(StartDate) = 3, MONTH(StartDate) = 4, MONTH(StartDate) = 5), TEXT(YEAR(ADDMONTHS(StartDate,1)))&amp;&apos;-Q2&apos;,
IF(OR(MONTH(StartDate) = 6, MONTH(StartDate) = 7, MONTH(StartDate) = 8), TEXT(YEAR(ADDMONTHS(StartDate,1)))&amp;&apos;-Q3&apos;,
IF(OR(MONTH(StartDate) = 9, MONTH(StartDate) = 10, MONTH(StartDate) = 11), TEXT(YEAR(ADDMONTHS(StartDate,1)))&amp;&apos;-Q4&apos;,null)))),null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Start Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractStartYear__c</fullName>
        <description>SFDC-5520: Calculate &apos;Contract Start Date&apos; Year as per 13month changes for FY2022 and 12month for other Financial Years.</description>
        <formula>IF(NOT(ISBLANK(StartDate)),IF(YEAR(StartDate) &lt;= 2021,TEXT(YEAR(ADDMONTHS(StartDate,1))),TEXT(YEAR(StartDate))),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Start Year</label>
        <type>Text</type>
    </fields>
</CustomObject>